# Kisan-Mitra-Demo-v1.2

./: README.md  home.py  pyproject.toml  utilities.py
assets/: styles.css
data/: Dim_Date.csv  Issue_Category_6May2025.csv  Issue_Dept_6May2025.csv
