[project]
name = "kmv1-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Archiet Kannan",email = "archietk@zohomail.in"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit-shadcn-ui (>=0.1.18,<0.2.0)"
]

[tool.poetry]
packages = [{include = "kmv1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
